# Oh-My-Claw

./: .gitignore  CODE_REVIEW_REPORT.md  PROJECT_ANALYSIS.md  PROJECT_REPORT.md  README.md  WORKFLOW.md  activate.sh  health_check.py  main_refactored.py  pyproject.toml  requirements.txt  run.sh  str  test_progress.py  test_subagent.py
.conda/conda-meta/: bzip2-1.0.8-h80987f9_6.json  ca-certificates-2025.12.2-hca03da5_0.json  expat-2.7.3-h50f4ffc_4.json  history  (+16 more)
.githooks/: pre-commit
codemate_agent/: __init__.py  cli.py  config.py  schema.py
docs/: index.html  memory_context_design.md
refactorsuggest/: README.md  __init__.py  analyzer.py  cli.py  main.py  models.py  report.md  report.txt  reporter.py  run_test.py  test_example.py
tests/: __init__.py  test_agent_completion.py  test_background_tasks.py  test_cli.py  test_commands_repo_rag.py  test_compressor.py  test_heartbeat.py  test_llm_client.py  test_logging.py  test_loop_guard.py  test_memory_retrieval.py  test_memory_write.py  test_message_bus_v2.py  test_metrics_display.py  test_progress_display.py  test_project_site_demo.py  test_repo_rag.py  test_run_shell.py  test_subagent_runner.py  test_task_board_lifecycle.py  test_task_board_tools.py  test_task_tool_team_routing.py  test_team_coordinator.py  test_team_protocols_v2.py  test_team_runtime.py
tmp/: agent_self_test.md
xxxxxxxxx/: PROJECT_SUMMARY.md  README.md  USAGE.md  __init__.py  __main__.py  analyzer.py  cli.py  issue.py  report.json  report.md  report.txt  reporter.py  requirements.txt  run.py  smell_detector.py  suggester.py  test_cli.py
(+319 files in other folders)
